--- a/Android/app/src/main/res/layout/activity_image_upload.xml
+++ b/Android/app/src/main/res/layout/activity_image_upload.xml
@@ -27,6 +27,13 @@
             android:text="@string/choose_from_library"
             />
 
+        <Button
+            android:id="@+id/use_camera"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/use_camera"
+            />
+
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
