--- a/Android/app/src/main/res/layout/activity_image_upload.xml
+++ b/Android/app/src/main/res/layout/activity_image_upload.xml
@@ -59,8 +59,8 @@
             android:id="@+id/stream_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="20dip"
-            android:text="@string/status_signed_out" />
+            android:layout_marginBottom="20dip"/>
+            <!--android:text="@string/status_signed_out" />-->
 
         <TextView
             android:id="@+id/lat_value"
