--- a/Android/app/src/main/res/layout/activity_view_stream.xml
+++ b/Android/app/src/main/res/layout/activity_view_stream.xml
@@ -27,4 +27,26 @@
         android:stretchMode="columnWidth"
         android:gravity="center"
         />
+
+    <EditText
+        android:id="@+id/search_message"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:hint="@string/search_hint" />
+
+    <Button
+        android:id="@+id/search"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/search"
+        />
+
+    <Button
+        android:id="@+id/subscribe_stream"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/subscribe_stream"
+        />
+
+
 </LinearLayout>
