--- a/Android/app/src/main/res/layout/activity_image_upload.xml
+++ b/Android/app/src/main/res/layout/activity_image_upload.xml
@@ -34,6 +34,14 @@
             android:text="@string/use_camera"
             />
 
+        <Button
+            android:id="@+id/camera_with_preview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Camera with preview"
+            android:onClick="cameraWithPreview"
+            />
+
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
