--- a/Android/app/src/main/res/layout/activity_view_stream_single.xml
+++ b/Android/app/src/main/res/layout/activity_view_stream_single.xml
@@ -1,62 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context="com.aptdemo.yzhao.androiddemo.ViewStreamSingle">
-
-    <TextView
-        android:text="@string/welcome"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:textSize="40sp"
-        android:paddingBottom = "40sp"
-        />
-
-    <TextView
-        android:id="@+id/name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="20dip"
-        android:textSize="20sp"
-        android:paddingBottom = "20sp"/>
-        <!--android:text="@string/status_signed_out" />-->
-
-    <GridView xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/gridview"
+    android:id="@+id/response_scroll"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:scrollbars="vertical"
+    tools:context="com.aptdemo.yzhao.androiddemo.ImageUpload"
+    android:fillViewport="false">
+    <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:columnWidth="90dp"
-        android:numColumns="4"
-        android:verticalSpacing="10dp"
-        android:horizontalSpacing="10dp"
-        android:stretchMode="columnWidth"
-        android:gravity="center"
-        />
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        tools:context="com.aptdemo.yzhao.androiddemo.ViewStreamSingle">
 
-    <Button
-        android:id="@+id/show_more"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/showmoreActivity"
-        android:onClick="showMore"
-        />
+        <TextView
+            android:text="@string/welcome"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textSize="40sp"
+            android:paddingBottom = "40sp"
+            />
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/uploadImageActivity"
-        android:clickable="false"
-        android:id="@+id/open_image_upload_page"/>
+        <TextView
+            android:id="@+id/name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dip"
+            android:textSize="20sp"
+            android:paddingBottom = "20sp"/>
+            <!--android:text="@string/status_signed_out" />-->
 
-    <Button
-        android:id="@+id/view_all_streams"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/imagePage"
-        android:onClick="viewStream"
-        />
-</LinearLayout>
+        <GridView xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/gridview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:columnWidth="90dp"
+            android:numColumns="4"
+            android:verticalSpacing="10dp"
+            android:horizontalSpacing="10dp"
+            android:stretchMode="columnWidth"
+            android:gravity="center"
+            />
+
+        <Button
+            android:id="@+id/show_more"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/showmoreActivity"
+            android:onClick="showMore"
+            />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/uploadImageActivity"
+            android:clickable="false"
+            android:id="@+id/open_image_upload_page"/>
+
+        <Button
+            android:id="@+id/view_all_streams"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/imagePage"
+            android:onClick="viewStream"
+            />
+    </LinearLayout>
+</ScrollView>
