--- a/Android/app/src/main/res/layout/activity_homepage.xml
+++ b/Android/app/src/main/res/layout/activity_homepage.xml
@@ -12,6 +12,22 @@
         android:orientation="vertical"
         tools:context=".Homepage">
 
+        <TextView
+            android:id="@+id/sign_in_status"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dip"
+            android:text="@string/status_signed_out" />
+
+        <TextView
+            android:text="@string/welcome"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textSize="40sp"
+            android:paddingBottom = "40sp"
+            />
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -41,23 +57,6 @@
 
         </LinearLayout>
 
-
-        <TextView
-            android:id="@+id/sign_in_status"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="20dip"
-            android:text="@string/status_signed_out" />
-
-        <TextView
-            android:text="@string/welcome"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:textSize="40sp"
-            android:paddingBottom = "40sp"
-            />
-
         <Button
             android:id="@+id/view_all_streams"
             android:layout_width="match_parent"
@@ -66,11 +65,11 @@
             android:onClick="viewStream"
             />
 
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/uploadImageActivity"
-            android:clickable="false"
-            android:id="@+id/open_image_upload_page"/>
+        <!--<Button-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="@string/uploadImageActivity"-->
+            <!--android:clickable="false"-->
+            <!--android:id="@+id/open_image_upload_page"/>-->
     </LinearLayout>
 </ScrollView>
