--- a/Android/app/src/main/res/layout/activity_image_upload.xml
+++ b/Android/app/src/main/res/layout/activity_image_upload.xml
@@ -4,7 +4,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:scrollbars="vertical"
-    tools:context="com.aptdemo.yzhao.androiddemo.ImageUpload"
+    tools:context="apt.com.miniproject.ImageUpload"
     android:fillViewport="false">
 
     <LinearLayout
