--- a/Android/app/src/main/res/layout/activity_search_result.xml
+++ b/Android/app/src/main/res/layout/activity_search_result.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.aptdemo.yzhao.androiddemo.ViewStream">
+    tools:context="apt.com.miniproject.SearchStream">
 
     <EditText
         android:id="@+id/search_message"
