--- a/Android/app/src/main/res/layout/activity_takepicture.xml
+++ b/Android/app/src/main/res/layout/activity_takepicture.xml
@@ -4,7 +4,7 @@ android:id="@+id/response_scroll"
 android:layout_width="fill_parent"
 android:layout_height="fill_parent"
 android:scrollbars="vertical"
-tools:context="com.aptdemo.yzhao.androiddemo.ImageUpload"
+tools:context="apt.com.miniproject.ImageUpload"
 android:fillViewport="false">
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
