--- a/Android/app/src/main/res/layout/activity_view_stream_single.xml
+++ b/Android/app/src/main/res/layout/activity_view_stream_single.xml
@@ -5,7 +5,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:scrollbars="vertical"
-    tools:context="com.aptdemo.yzhao.androiddemo.ImageUpload"
+    tools:context="apt.com.miniproject.ViewStreamSingle"
     android:fillViewport="false">
     <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        tools:context="com.aptdemo.yzhao.androiddemo.ViewStreamSingle">
+        tools:context="apt.com.miniproject.ViewStreamSingle">
 
         <TextView
             android:text="@string/welcome"
