--- a/Android/app/src/main/res/layout/activity_view_stream.xml
+++ b/Android/app/src/main/res/layout/activity_view_stream.xml
@@ -46,6 +46,14 @@
             android:text="@string/search"
             android:onClick="searchHandler"
             />
+
+        <Button
+            android:id="@+id/view_nearby"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/ViewNearby"
+            android:onClick="viewNearbyHandler"
+            />
     </LinearLayout>
     <!--<searchable xmlns:android="http://schemas.android.com/apk/res/android"-->
         <!--android:label="@string/search_label"-->
@@ -57,6 +65,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/subscribe_stream"
+        android:onClick="viewSubscribedStreams"
         />
 
 
